--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/codey-singh/node-experiments/issues"
   },
-  "homepage": "https://github.com/codey-singh/node-experiments#readme"
+  "homepage": "https://github.com/codey-singh/node-experiments#readme",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
