--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
+    "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.2.1",
-    "mongoose": "^4.13.7"
+    "mongoose": "^4.13.7",
+    "should": "^13.1.3",
+    "sinon": "^4.1.3"
   }
 }
