--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "node-experiments",
   "version": "1.0.0",
   "description": "A sample REST API in node and express",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
